--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "konsum-frontend",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0-semantic-release",
   "devDependencies": {
-    "inferno-scripts": "0.13.2"
+    "inferno-scripts": "0.13.2",
+    "semantic-release": "^6.3.6"
   },
-  "dependencies": {},
+  "dependencies": {
+    "inferno-component": "^1.3.0-rc.10"
+  },
   "scripts": {
     "start": "inferno-scripts start",
     "build": "inferno-scripts build",
     "test": "inferno-scripts test --env=jsdom",
-    "eject": "inferno-scripts eject"
-  }
+    "eject": "inferno-scripts eject",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+  },
+  "license": "BSD-2-Clause"
 }
