--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,7 @@ before_install:
 - npm i -g npm@latest
 before_script:
 - npm prune
-- npm install -g codecov
-- npm install coveralls
 script:
-- npm run cover
-after_script:
-- codecov
-- cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+- npm test
 after_success:
 - npm run semantic-release
