--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-vue": "^2.0.2",
-    "css-loader": "^0.28.11",
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
-    "vue-loader": "^14.2.3",
+    "semantic-release": "^15.0.0",
+    "vue-loader": "^15.6.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.15.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3",
-    "semantic-release": "^15.0.0"
+    "webpack-dev-server": "^3.1.3"
   }
 }
