--- a/package.json
+++ b/package.json
@@ -11,24 +11,22 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "vue": "^2.5.16",
+    "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@vue/babel-preset-app": "^3.3.0",
     "babel-loader": "^8.0.5",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-vue": "^2.0.2",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "path": "^0.12.7",
     "semantic-release": "^15.0.0",
     "vue-loader": "^15.6.1",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.15.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "vue-template-compiler": "^2.5.16"
   }
 }
