--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "semantic-release": "^15.0.0",
-    "vue-loader": "^15.6.1",
+    "vue-loader": "^15.6.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "vue-template-compiler": "^2.5.16"
+    "webpack-dev-server": "^3.1.14"
   }
 }
