--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "prepare": "webpack-cli",
     "start": "webpack-dev-server --open",
-    "semantic-release": "semantic-release"
+    "package": "npm-pkgbuild -t /data/binaries/arch-linux/packages pkgbuild pacman makepkg"
   },
   "dependencies": {
     "vue": "^2.5.22",
@@ -28,6 +28,14 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "npm-pkgbuild": "^4.2.9"
+  },
+  "pacman": {
+    "groups": "home-automation",
+    "content": {
+      "/services/konsum/docroot/main.js": "dist/main.js",
+      "/services/konsum/docroot/index.html": "dist/index.html"
+    }
   }
 }
