--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "npm-pkgbuild": "^4.2.10",
     "semantic-release": "^15.0.0",
     "vue-loader": "^15.6.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "npm-pkgbuild": "^4.2.9"
+    "webpack-dev-server": "^3.1.14"
   },
   "pacman": {
     "groups": "home-automation",
