--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "prepare": "webpack --config webpack.production.js",
     "start": "webpack-dev-server --open",
-    "package": "npm-pkgbuild -t /data/binaries/arch-linux/packages pkgbuild pacman makepkg"
+    "package": "npm-pkgbuild -t /data/binaries/arch-linux/packages/{{arch}} pkgbuild pacman makepkg"
   },
   "dependencies": {
     "vue": "^2.6.6",
@@ -23,12 +23,12 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "npm-pkgbuild": "^5.1.0",
+    "npm-pkgbuild": "^5.1.7",
     "semantic-release": "^15.0.0",
     "vue-loader": "^15.6.4",
     "vue-template-compiler": "^2.6.5",
-    "webpack-cli": "^3.2.3",
     "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0",
     "webpack-merge": "^4.2.1"
   },
