--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@semantic-release/exec": "^3.3.3",
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@vue/babel-preset-app": "^3.7.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
-    "npm-pkgbuild": "^5.2.5",
-    "semantic-release": "^15.0.0",
+    "npm-pkgbuild": "^5.3.2",
+    "semantic-release": "^15.13.12",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.30.0",
@@ -33,11 +34,26 @@
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1"
   },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "npx npm-pkgbuild --pkgver ${nextRelease.version} pkgbuild pacman makepkg"
+        }
+      ]
+    ]
+  },
   "pacman": {
     "groups": "home-automation",
+    "installdir": "/services/konsum/frontend",
     "content": {
-      "/services/konsum/docroot/main.js": "dist/main.js",
-      "/services/konsum/docroot/index.html": "dist/index.html"
+      "${installdir}/": {
+        "base": "build/dist",
+        "pattern": "**/*"
+      }
     },
     "depends": {
       "konsum": ""
