--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "npm-pkgbuild": "^6.4.6",
+    "npm-pkgbuild": "^6.4.11",
     "semantic-release": "^15.13.12",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
@@ -50,13 +50,12 @@
     "groups": "home-automation",
     "installdir": "/services/konsum/frontend",
     "content": {
-      "${installdir}/": {
-        "base": "build/dist",
-        "pattern": "**/*"
-      }
+      "${installdir}/": { "base": "build/dist", "pattern": "**/*" },
+      "/etc/nginx/config.d/${name}.conf" : "config/nginx.conf"
     },
     "depends": {
-      "konsum": ""
+      "systemd": ">=241.0",
+      "konsum": ">=1.16.0"
     }
   }
 }
