--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "npm-pkgbuild": "^6.4.11",
-    "semantic-release": "^15.13.12",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "@semantic-release/exec": "^3.3.3",
+    "semantic-release": "^15.13.16"
   },
   "release": {
     "plugins": [
