--- a/package.json
+++ b/package.json
@@ -18,22 +18,21 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@semantic-release/exec": "^3.3.3",
     "@vue/babel-preset-app": "^3.8.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "npm-pkgbuild": "^6.4.11",
+    "semantic-release": "^15.13.16",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.33.0",
+    "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.1",
-    "webpack-merge": "^4.2.1",
-    "@semantic-release/exec": "^3.3.3",
-    "semantic-release": "^15.13.16"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   },
   "release": {
     "plugins": [
@@ -51,8 +50,11 @@
     "groups": "home-automation",
     "installdir": "/services/konsum/frontend",
     "content": {
-      "${installdir}/": { "base": "build/dist", "pattern": "**/*" },
-      "/etc/nginx/config.d/${name}.conf" : "config/nginx.conf"
+      "${installdir}/": {
+        "base": "build/dist",
+        "pattern": "**/*"
+      },
+      "/etc/nginx/config.d/${name}.conf": "config/nginx.conf"
     },
     "depends": {
       "systemd": ">=241.0",
