--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,4 @@
 location /services/konsum/ {
-  rewrite /services/konsum/(.*) /$1 break;
-  root   {{installdir}};
-  index  index.html;
+  alias {{installdir}};
+  try_files $uri $uri/ /index.html;
 }
