fix(nginx): use full path in try_files

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,4 +1,4 @@
 location /services/konsum/ {
   alias {{installdir}};
-  try_files $uri $uri/ /index.html;
+  try_files $uri$args $uri$args/ /services/konsum/index.html;
 }
