--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "npm-pkgbuild":"^6.5.3",
-    "semantic-release": "^15.13.16",
+    "npm-pkgbuild":"^6.5.6",
+    "semantic-release": "^15.13.19",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.34.0",
@@ -49,15 +49,20 @@
   "pacman": {
     "groups": "home-automation",
     "installdir": "/services/konsum/frontend",
+    "install": "pacman/install.sh",
+    "properties": {
+      "urlPrefix": "/services/konsum"
+    },
     "content": {
       "${installdir}/": {
         "base": "dist"
       },
-      "/etc/nginx/config.d/${name}.conf": "config/nginx.conf"
+      "/etc/nginx/config.d/${name}.conf": "pacman/nginx.conf"
     },
     "depends": {
-      "systemd": ">=241.0",
+      "systemd": ">=242.32",
+      "nginx-mainline": ">=1.17.1",
       "konsum": ">=1.16.0"
-    }
+    }  
   }
 }
