--- a/pacman/nginx.conf
+++ b/pacman/nginx.conf
@@ -1,4 +1,4 @@
 location {{urlPrefix}} {
   alias {{installdir}};
-  try_files $uri$args $uri$args/ {{urlPrefix}}index.html;
+  try_files $uri$args $uri$args/ {{urlPrefix}}/index.html;
 }
