--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "^3.2.0",
     "npm-pkgbuild": "^6.6.1",
     "semantic-release": "^15.13.19",
+    "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.6",
