--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "npm-pkgbuild": "^6.7.0",
+    "npm-pkgbuild": "^6.8.0",
     "semantic-release": "^15.13.19",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
@@ -52,7 +52,7 @@
   "pacman": {
     "groups": "home-automation",
     "installdir": "/services/konsum/frontend",
-    "install": "pacman/install.sh",
+    "hooks": "pacman/install.sh",
     "content": {
       "${installdir}/": {
         "base": "dist"
