--- a/package.json
+++ b/package.json
@@ -1,18 +1,54 @@
 {
   "name": "konsum-frontend",
-  "description": "konsum web frontend",
   "version": "0.0.0-semantic-release",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/k0nsti/konsum-frontend.git"
+  "publishConfig": {
+    "access": "public"
   },
+  "sideEffects": false,
+  "exports": {
+    ".": "{{main}}"
+  },
+  "description": "konsum web frontend",
+  "keywords": [
+    "leveldb",
+    "timeseries"
+  ],
+  "contributors": [
+    {
+      "name": "Markus Felten",
+      "email": "markus.felten@gmx.de"
+    }
+  ],
   "license": "BSD-2-Clause",
+  "bin": {
+    "konsum": "./src/konsum-cli.mjs"
+  },
   "scripts": {
+    "package": "npm-pkgbuild --npm-dist --npm-modules pkgbuild pacman makepkg && npm-pkgbuild pkgbuild pacman makepkg",
     "prepare": "webpack --config webpack.production.js",
-    "start": "webpack-dev-server --open",
-    "package": "npm-pkgbuild pkgbuild pacman makepkg"
+    "prepublishOnly": "publish-please guard",
+    "publish-please": "publish-please",
+    "start": "node bin/konsum --config=config start && webpack-dev-server --open",
+    "test": "npm run test:ava",
+    "test:ava": "ava --timeout 2m tests/*.mjs",
+    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m tests/*.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
+    "docs": "documentation readme ./src/konsum-cli.mjs --section=API && documentation readme {{main}} --section=API && documentation readme ./src/master.mjs --section=API",
+    "lint": "npm run lint:docs",
+    "lint:docs": "documentation lint ./src/konsum-cli.mjs && documentation lint {{main}} && documentation lint ./src/master.mjs"
   },
   "dependencies": {
+    "commander": "^6.2.0",
+    "config-expander": "^12.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.0",
+    "koa-better-router": "^2.1.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-jwt": "^4.0.0",
+    "konsum-db": "^3.0.1",
+    "ldapts": "^2.10.1",
+    "leveldown": "^5.6.0",
+    "levelup": "^4.4.0",
+    "sd-daemon": "^1.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1"
@@ -20,13 +56,23 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
+    "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@vue/babel-preset-app": "^4.0.5",
+    "ava": "^3.14.0",
     "babel-loader": "^8.0.6",
+    "builtin-modules": "^3.1.0",
+    "c8": "^7.3.5",
     "css-loader": "^3.1.0",
+    "documentation": "github:arlac77/documentation",
+    "execa": "^5.0.0",
+    "got": "^11.8.1",
     "html-webpack-plugin": "^4.0.0",
-    "npm-pkgbuild": "^6.11.1",
-    "semantic-release": "^17.0.0",
+    "leveldown": "^5.6.0",
+    "npm-pkgbuild": "^6.12.18",
+    "semantic-release": "^17.3.0",
+    "tmp": "^0.2.1",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.38.0",
@@ -34,20 +80,29 @@
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
   },
-  "release": {
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      [
-        "@semantic-release/exec",
-        {
-          "publishCmd": "npx npm-pkgbuild --pkgver ${nextRelease.version} pkgbuild pacman makepkg"
-        }
-      ]
-    ]
+  "optionalDependencies": {
+    "sd-daemon": "^1.0.2"
   },
+  "engines": {
+    "node": ">=14.15.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/konsumation/konsum-frontend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/konsumation/konsum-frontend/issues"
+  },
+  "homepage": "https://github.com/konsumation/konsum-frontend#readme",
   "config": {
+    "base": "/services/${name}/api",
+    "socket": "/run/${name}/http/socket",
     "urlPrefix": "/services/konsum"
+  },
+  "systemd": {
+    "units": {
+      "${name}": "systemd/${name}*"
+    }
   },
   "pacman": {
     "groups": "home-automation",
@@ -57,12 +112,46 @@
       "${installdir}/": {
         "base": "dist"
       },
-      "/etc/nginx/config.d/${name}.conf": "pacman/nginx.conf"
+      "/etc/nginx/config.d/${name}.conf": "pacman/nginx.conf",
+      "/usr/lib/tmpfiles.d/${name}.conf": "pacman/tmpfiles.conf",
+      "/etc/${name}/config.json": "config/config.json"
     },
     "depends": {
-      "systemd": ">=244",
-      "nginx-mainline": ">=1.17.1",
+      "systemd": ">=247.2",
+      "nginx-mainline": ">=1.19.3",
       "konsum": ">=1.19.1"
-    }
+    },
+    "arch": [
+      "aarch64",
+      "armv7h",
+      "x86_64"
+    ],
+    "backup": "etc/${name}/config.json"
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "npx npm-pkgbuild --pkgver ${nextRelease.version} --npm-dist --npm-modules pkgbuild pacman makepkg"
+        }
+      ],
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "npx npm-pkgbuild --pkgver ${nextRelease.version} pkgbuild pacman makepkg"
+        }
+      ]
+    ]
+  },
+  "template": {
+    "inheritFrom": [
+      "arlac77/template-vscode",
+      "konsumation/konsum",
+      "konsumation/konsum-db",
+      "konsumation/template"
+    ]
   }
 }
