--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,14 @@
-coverage
-node_modules
 build
 tests
 doc
 *.log
 *.tmp
-.DS_Store
 .test
 .tmp
-.gitignore
-.npmrc
 .travis.yml
-.npmignore
 .vscode
-.nyc_output
+pacman
+.github
+rollup.config.*
+config
+systemd
