--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         node-version:
-          - 14.17.1
+          - 14.17.3
     steps:
       - uses: actions/checkout@v2
       - name: Cache node modules
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: npm
       - run: npm install
       - run: npm run build --if-present
       - run: npm run cover --if-present
@@ -45,7 +46,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14.17.1
+          node-version: 14.17.3
+          cache: npm
       - run: npm install
       - run: npx semantic-release
         env:
